added options for edit/delete role in users page