@@ -2,29 +2,42 @@ package com.unibuc.goalmate.service;
 
 import com.unibuc.goalmate.dto.UserResponseDto;
 import com.unibuc.goalmate.repository.GoalMateUserRepository;
+import com.unibuc.goalmate.repository.RoleRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserService {
     private final GoalMateUserRepository userRepository;
+    private final RoleRepository roleRepository;
 
     public List<UserResponseDto> getAllUsers() {
         return userRepository.findAll().stream().map(
-                user -> new UserResponseDto(
-                        user.getUserId(),
-                        user.getUsername(),
-                        user.getEmail(),
-                        user.getRoles().stream().map(
-                                role -> role.getRoleName().name()
-                        )
-                                .sorted()
-                                .collect(Collectors.toList())
-                )
-        ).collect(Collectors.toList());
+                user -> {
+                    List<String> userRoles = user.getRoles().stream()
+                            .map(role -> role.getRoleName().name())
+                            .sorted()
+                            .toList();
+
+                    List<String> allRoles = roleRepository.findAll().stream()
+                            .map(role -> role.getRoleName().name())
+                            .toList();
+
+                    List<String> missingRoles = allRoles.stream()
+                            .filter(role -> !userRoles.contains(role))
+                            .toList();
+
+                    return new UserResponseDto(
+                            user.getUserId(),
+                            user.getUsername(),
+                            user.getEmail(),
+                            userRoles,
+                            missingRoles
+                    );
+                }
+        ).toList();
     }
 }
